# kevengine

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  TODO  build.bat  build.sh  compile.bat  run.bat
core/: kevin.hpp  main.cpp
core/renderer/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  transform.cpp  transform.hpp
core/world/: camera.cpp  camera.hpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp
lib/glad/: glad.c  glad.h
lib/glad/glad/src/: glad.c
src/: BufferUtil.cpp  BufferUtil.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Engine.hpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  g_math.h  game.c  game.h  kevin.h  main.c  main.cpp  math.c  math.h  prototyping.cpp  prototyping.hpp  renderer.c  renderer.h  util.c  util.h
src/core/: scene.h
src/core/components/: camera.c  camera.h  model.c  model.h
src/core/math/: math.h
src/core/renderer/: camera.c  camera.h  entity.c  entity.h  mesh.c  mesh.h  ogl.c  ogl.h  opengl_helper.c  opengl_helper.h  renderer.c  renderer.h  shader.c  shader.h  window.c  window.h
src/core/util/: g_math.h  list.c  list.h  math.h  mem.c  mem.h  str.c  str.h  tiny_math.h
src/core/utility/: file_io.c  file_io.h  io.h  math.c  math.h  memory.c  memory.h  model_loader.c  model_loader.h  util.c  util.h
src/render/: BufferUtil.cpp  BufferUtil.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/scene/: Camera.cpp  Camera.hpp  Model.cpp  Model.hpp
